# c_learn

./: CMakeLists.txt  main.c
include/: a.h
src/: a.c
